--- a/labs/lab01/presentation/mathmod-lab01-presentation.qmd
+++ b/labs/lab01/presentation/mathmod-lab01-presentation.qmd
@@ -1,10 +1,8 @@
 ---
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  name: Чилеше Лупупа
+  email: 1032225194@rudn.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -12,189 +10,115 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: "Математическое моделирование"
+subtitle: "Лабораторная работа № 1"
 license: CC BY
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
-
-# Информация
-
-## Докладчик
-
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
-
-:::
-::: {.column width="30%"}
-
-![](./image/kulyabov.jpg)
-
-:::
-::::::::::::::
 
 # Вводная часть
 
-## Актуальность
+## Цель работы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+- Изучить модель экспоненциального роста и её математическую интерпретацию  
+- Получить аналитическое решение дифференциального уравнения  
+- Провести анализ влияния коэффициента роста $\alpha$  
+- Проанализировать:
+  - динамику функции $u(t)$  
+  - зависимость времени удвоения $T_2$  
+  - особенности вычислительных затрат  
 
-## Объект и предмет исследования
+## Задание
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+- Рассмотреть модель экспоненциальной динамики  
+- Исследовать её математическое описание  
+- Провести серию вычислительных экспериментов при различных значениях $\alpha$  
+- Представить результаты в виде графиков  
 
-## Цели и задачи
+# Теоретическая часть
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+## Математическая модель
 
-## Материалы и методы
+Процесс экспоненциального изменения описывается уравнением:
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+$$
+\frac{du}{dt} = \alpha u
+$$
 
-# Создание презентации
+Обозначения:
 
-## Процессор `pandoc`
+- $u$ — исследуемая величина (популяция, капитал, объём и др.)  
+- $t$ — время  
+- $\alpha$ — параметр роста  
+  - $\alpha > 0$ — рост  
+  - $\alpha < 0$ — спад  
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+## Аналитическое решение
 
-## Формат `pdf`
+Общее решение уравнения:
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+$$
+u(t) = u_0 e^{\alpha t}
+$$
 
-## Код для формата `pdf`
+Время удвоения определяется выражением:
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+$$
+T_2 = \frac{\ln(2)}{\alpha} \approx \frac{0.693}{\alpha}
+$$
 
-## Формат `html`
+Свойства модели:
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+- увеличение $\alpha$ усиливает скорость роста  
+- время удвоения обратно пропорционально $\alpha$  
 
-## Код для формата `html`
+# Экспериментальная часть
 
-- Тема задаётся в файле `Makefile`
+## Базовый расчёт (α = 0.3)
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+- Выполнено моделирование при фиксированном значении коэффициента  
+- График отражает ускоряющийся характер изменения функции  
 
-## Получающиеся форматы
+![](./image/single_experiment.png){width=85%}
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+# Параметрический анализ
 
-# Элементы презентации
+## Влияние коэффициента роста
 
-## Актуальность
+- Рассмотрены значения:
+  - $\alpha = 0.1,\;0.3,\;0.5,\;0.8,\;1.0$  
+- С увеличением $\alpha$ кривая становится более крутой  
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![](./image/parametric_scan_comparison.png){width=90%}
 
-## Цели и задачи
+## Анализ времени удвоения
 
-- Не формулируйте более 1--2 целей исследования
+Формула:
 
-## Материалы и методы
+$$
+T_2 = \frac{\ln(2)}{\alpha}
+$$
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+- Численные результаты подтверждают теоретическую зависимость  
+- При больших $\alpha$ период удвоения сокращается  
 
-## Содержание исследования
+![](./image/doubling_time_vs_alpha.png){width=85%}
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Анализ вычислительного времени
 
-## Результаты
+- Оценена длительность расчётов при разных $\alpha$  
+- Существенной зависимости не обнаружено  
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+![](./image/computation_time_vs_alpha.png){width=85%}
 
+# Итоговая часть
 
-## Итоговый слайд
+## Основные выводы
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+- Экспериментальные данные согласуются с аналитическим решением  
+- Рост параметра $\alpha$ приводит к:
+  - ускорению динамики  
+  - уменьшению времени удвоения  
+  - незначительному увеличению вычислительных затрат  
 
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
