--- a/labs/lab01/report/mathmod-lab01-report.qmd
+++ b/labs/lab01/report/mathmod-lab01-report.qmd
@@ -1,10 +1,8 @@
 ---
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  name: Чилеше Лупупа
+  email: 1032225194@rudn.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -13,55 +11,125 @@ author:
       address: ул. Миклухо-Маклая, д. 6
 
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Математическое моделирование"
+subtitle: "Лабораторная работа № 1"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Рассмотреть модель экспоненциального роста, раскрыть её формальное описание, получить аналитическое решение соответствующего дифференциального уравнения и проанализировать влияние коэффициента роста на поведение системы. Освоить приёмы параметрического исследования и интерпретации результатов моделирования.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+В рамках лабораторной работы необходимо исследовать модель экспоненциального роста: проанализировать её математическую формулировку, изучить решение дифференциального уравнения, а также выполнить параметрический анализ влияния коэффициента роста на динамику процесса, время удвоения и вычислительные характеристики.
 
 # Теоретическое введение
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
+Экспоненциальный рост представляет собой процесс, при котором скорость изменения величины пропорциональна её текущему значению. Иными словами, чем больше значение функции в данный момент времени, тем интенсивнее происходит её дальнейшее увеличение.
 
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
+В качестве наглядных примеров можно привести начисление сложных процентов или увеличение снежного кома: по мере роста объекта его прирост становится всё более существенным.
 
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
+Математическая модель описывается дифференциальным уравнением:
 
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
+$$
+\frac{du}{dt} = \alpha u
+$$
 
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+где:  
+— $$u$$ — текущее значение исследуемой величины (численность популяции, объём капитала, количество заражённых и т.п.);  
+— $$t$$ — время;  
+— $$\frac{du}{dt}$$ — мгновенная скорость изменения;  
+— $$\alpha$$ — постоянный коэффициент роста (мальтузианский параметр).
+
+При $$\alpha > 0$$ система демонстрирует рост, при $$\alpha < 0$$ наблюдается экспоненциальное убывание.
+
+Смысл модели заключается в прямой зависимости темпа изменения величины от её текущего состояния.
+
+Решение данного уравнения имеет вид:
+
+$$
+u(t) = u_0 e^{\alpha t}
+$$
+
+где $$u_0$$ — начальное значение величины в момент времени $$t = 0$$.
+
+## Ключевые характеристики модели
+
+— Увеличение значения в два раза происходит за фиксированный промежуток времени.  
+
+— Время удвоения определяется формулой:
+
+$$
+T_2 = \frac{\ln(2)}{\alpha} \approx \frac{0.693}{\alpha}
+$$
+
+— Длительность периода удвоения зависит исключительно от коэффициента роста и не определяется текущим значением функции.
+
+## Области применения
+
+— Биология: размножение микроорганизмов при отсутствии ограничений по ресурсам.  
+— Финансы: начисление сложных процентов по банковским вкладам.  
+— Эпидемиология: начальная фаза распространения инфекционных заболеваний.  
+— Демография: рост населения в определённые исторические периоды.  
+— Физика: развитие цепных ядерных реакций.  
+— Информационные технологии: увеличение вычислительных мощностей и сетевого трафика.
+
+## Ограничения модели
+
+Экспоненциальная модель носит идеализированный характер. В реальных условиях ресурсы ограничены, поэтому бесконечный рост невозможен. По мере исчерпания ресурсов динамика изменяется и система переходит к логистическому (S-образному) типу роста.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+В процессе выполнения работы была реализована модель экспоненциального роста на основе аналитического решения дифференциального уравнения.
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+На первом этапе проведён базовый эксперимент при фиксированном значении коэффициента $$\alpha = 0.3$$. Построенный график отражает зависимость величины от времени и иллюстрирует характерную ускоряющуюся динамику.
+
+![Экспоненциальный рост (базовый эксперимент)](image/single_experiment.png){#fig-base width=80%}
+
+В начале интервала функция изменяется сравнительно медленно, однако по мере увеличения времени темп роста возрастает, и к концу рассматриваемого промежутка наблюдается резкое увеличение значения.
+
+Далее выполнено параметрическое исследование, направленное на анализ влияния коэффициента $$\alpha$$ на поведение системы. Были построены графики для нескольких значений параметра.
+
+![Параметрическое исследование: влияние α на рост](image/parametric_scan_comparison.png){#fig-param width=85%}
+
+Полученные результаты демонстрируют, что увеличение $$\alpha$$ приводит к существенному ускорению роста. При малых значениях параметра зависимость остаётся более пологой, тогда как при больших — функция быстро достигает высоких значений.
+
+Отдельно рассмотрена зависимость времени удвоения от коэффициента роста. Теоретическое выражение $$T_2 = \ln(2)/\alpha$$ было сопоставлено с численными результатами.
+
+![Зависимость времени удвоения от α](image/doubling_time_vs_alpha.png){#fig-double width=80%}
+
+График подтверждает обратную зависимость: при увеличении $$\alpha$$ время удвоения сокращается, что полностью согласуется с аналитической формулой.
+
+Дополнительно исследована зависимость времени вычисления от значения коэффициента роста.
+
+![Зависимость времени вычисления от α](image/computation_time_vs_alpha.png){#fig-time width=80%}
+
+Зафиксировано незначительное увеличение вычислительных затрат при росте $$\alpha$$, что обусловлено увеличением диапазона значений функции и особенностями численной обработки данных.
+
+Для реализации моделирования и построения графиков использовались внешние файлы с программным кодом:
+
+{{< include ../project/markdown/01_exponential_growth/01_exponential_growth.qmd >}}
+
+{{< include ../project/markdown/02_exponential_growth/02_exponential_growth.qmd >}}
+
+Проведённый анализ позволил наглядно оценить влияние коэффициента роста на динамику изменения величины, время удвоения и вычислительные параметры модели.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+В рамках лабораторной работы детально рассмотрена модель экспоненциального роста и её математическая основа. Проанализировано дифференциальное уравнение, описывающее динамику процесса, и получено его аналитическое решение.
+
+Построен базовый график, иллюстрирующий ускоряющийся характер изменения величины во времени. Параметрическое исследование показало, что коэффициент $$\alpha$$ существенно определяет скорость развития системы.
+
+Экспериментально подтверждена теоретическая формула для времени удвоения: с увеличением $$\alpha$$ данный показатель уменьшается. Анализ вычислительных затрат выявил слабую зависимость времени расчёта от значения параметра.
+
+Результаты моделирования соответствуют теоретическим положениям об экспоненциальной динамике и подтверждают применимость данной модели для описания процессов в биологии, экономике, физике и сфере информационных технологий.
 
 # Список литературы{.unnumbered}
 
-::: {#refs}
-:::
+1. A Multi-Language Computing Environment for Literate Programming and Reproducible Research / E. Schulte [et al.] // Journal of Statistical Software. — 2012. — Vol. 46, no. 3. — ISSN 1548-7660. — DOI: 10.18637/jss.v046.i03.
+
+2. Knuth D. E. Literate Programming // The Computer Journal. — 1984. — Feb. — Vol. 27, no. 2. — P. 97–111. — ISSN 1460-2067. — DOI: 10.1093/comjnl/27.2.97.
+
+3. The Story in the Notebook / M. B. Kery [et al.] // Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems. — ACM, 04/2018. — P. 1–11. — DOI: 10.1145/3173574.3173748.
+
